tldr overflow fix

--- a/css/_index.sass
+++ b/css/_index.sass
@@ -99,6 +99,7 @@
 .tldr
   margin-top: 100px
   font-family: Hind
+  overflow: hidden
   h1
     font-weight: bold
     font-size: 4em
